--- a/lib/key.env
+++ b/lib/key.env
@@ -3,3 +3,7 @@ OMDB_KEY = a167ee30
 SUPABASE_URL = https://eqzhbrlkhxdiqcfkmkuq.supabase.co
 
 SUPABASE_PUBLIC_API_KEY = sb_publishable_z__V75FimT4CGsDth2X1TA_aiSXFZYy
+
+GEMINI_API_KEY = AIzaSyAbIa-6c_-EW3er_RcTEIEu939nU7pbGKE
+
+OMDB_API_KEY = a167ee30
